--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,228 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #0070f3;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
+.container_main {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1025px) {
+  .buttons {
+    margin-top: 12px;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media only screen and (max-width: 600px) {
+  .options {
+    height: 40px;
+    padding: 0px 10px !important;
+    font-size: 12px !important;
+  }
+}
+
+@media only screen and (min-width: 1023px) {
+  .hide {
+    display: none;
+  }
+}
+
+.btn {
+  display: inline-block;
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background-color: #0058b7;
+  color: #fff;
+}
+
+.btn-back {
+  display: inline-block;
+  background-color: #f4f4f4;
+  color: #333;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  cursor: pointer;
+  text-decoration: none;
+  margin-bottom: 1.3rem;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 1.5rem;
+  border-bottom: 5px solid #fff;
+}
+
+.logo {
+  text-align: center;
+}
+
+.logo a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* .links a {
+  margin: 0 0.8rem 0 0.8rem;
+  text-decoration: none;
+} */
+
+.search-form {
+  display: flex;
+  align-items: center;
+}
+
+.search-input {
+  width: 100%;
+  padding: 0.8rem;
+  border: 0;
+  border-radius: 0.375rem;
+  font-size: 1rem;
+}
+
+
+.search-button {
+  padding: 0.7rem 1rem;
+  margin-left: 0.5rem;
+  background-color: var(--primary-color);
+  color: #fff;
+  background-color: rgb(244, 63, 94);
+  border: none;
+  border-radius: 0.375rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: rgb(239, 61, 88);
+}
+
+
+/* .search-input:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  box-shadow: 0 0 0 2px rgba(213, 16, 49, 0.7);
+} */
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: blue;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+.card {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem;
+
+  background-color: #fff;
+  color: #333;
+}
+
+.card h2 {
+  font-size: 1.5rem;
+  margin-top: 0;
+}
+
+.card .card-content {
+  margin-top: 1rem;
+}
+
+.card .card-stats {
+  display: flex;
+  margin: 1rem 0;
+}
+
+.card .card-stat {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.card .card-stat svg {
+  margin-right: 0.5rem;
+}
+
+.card .card-stat span {
+  font-size: 0.9rem;
+}
+
+.courses .card h2 {
+  margin-bottom: 0;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animated {
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+}
+
+.header {
+  animation: 1s ease-out 0s 1 slideInFromTop;
+
+  background: #333;
 }
